--- a/src/app/navigation/navbar.component.html
+++ b/src/app/navigation/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class=" navbar navbar-expand-lg navbar-light bg-white">
+<nav class=" navbar navbar-expand-lg navbar-light bg-white navbar justify-content-center">
     <img src="/assets/index.png" style=height:50px>
     <div class="dropdown show">
         <a class="btn btn-white dropdown-toggle " href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
