--- a/src/app/Footer/Footer.component.html
+++ b/src/app/Footer/Footer.component.html
@@ -1,3 +1,31 @@
-<p>
-    Footer
-</p>
+<div class="fixed-bottom">
+<ul class="nav">
+    <li class="nav-item">
+    <button type="button" class="btn btn-secondary btn-sm btn-light" >About eBay</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Announcements</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Community</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Security Center</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Policies</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Affiliates</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Help & Contact</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Site Map</button>
+</li>
+</ul>
+
+<ul class="nav">
+    <li class="nav-item">
+        Copyright 1995-2022 eBay Inc. All Rights Reserved
+    <button type="button" class="btn btn-secondary btn-sm btn-light" >Accesibility,</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">User Agreement,</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Privacy,</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Cookies,</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Do not sell my personal information</button>
+    and
+    <button type="button" class="btn btn-secondary btn-sm btn-light">AdChoice</button>
+</li>
+</ul>
+
+</div>
+
+
+
