--- a/src/app/navigation/navbar.component.html
+++ b/src/app/navigation/navbar.component.html
@@ -35,14 +35,32 @@
               <a class="dropdown-item" href="#">Clothing, Shoes, & Accesssories</a>
               <a class="dropdown-item" href="#">Coins and Paper Money</a>
               <a class="dropdown-item" href="#">Collectables</a>
-              <a class="dropdown-item" href="#">Art</a>
-              <a class="dropdown-item" href="#">Baby</a>
-              <a class="dropdown-item" href="#">Books</a>
-              <a class="dropdown-item" href="#">Buisness & Industrial</a>
-              <a class="dropdown-item" href="#">Camera & Hobbies</a>
+              <a class="dropdown-item" href="#">Computer/ Tables & Networking</a>
+              <a class="dropdown-item" href="#">Consumer Electronics</a>
+              <a class="dropdown-item" href="#">Crafts</a>
+              <a class="dropdown-item" href="#">Dolls & Bears</a>
+              <a class="dropdown-item" href="#">Movies & TV</a>
               <a class="dropdown-item" href="#">Cellphones & Accessories</a>
-              <a class="dropdown-item" href="#">Clothing, Shoes, & Accesssories</a>
-              <a class="dropdown-item" href="#">Coins and Paper Money</a>
+              <a class="dropdown-item" href="#">Entertainment Memorabelia</a>
+              <a class="dropdown-item" href="#">Gift Cards & Coupons</a>
+              <a class="dropdown-item" href="#">Health & Beauty</a>
+              <a class="dropdown-item" href="#">Home & Garden</a>
+              <a class="dropdown-item" href="#">Jewlrey & Watches</a>
+              <a class="dropdown-item" href="#">Music</a>
+              <a class="dropdown-item" href="#">Musical Instruments & Gear</a>
+              <a class="dropdown-item" href="#">Pet Supplies</a>
+              <a class="dropdown-item" href="#">Pottery & Glass</a>
+              <a class="dropdown-item" href="#">Real Estate</a>
+              <a class="dropdown-item" href="#">Specialty Servies</a>
+              <a class="dropdown-item" href="#">Sporting Goods</a>
+              <a class="dropdown-item" href="#">Sports Mem, Cards & Fan Shop</a>
+              <a class="dropdown-item" href="#">Stamps</a>
+              <a class="dropdown-item" href="#">Tickets & Experiences</a>
+              <a class="dropdown-item" href="#">Toys & Hobbies</a>
+              <a class="dropdown-item" href="#">Travel</a>
+              <a class="dropdown-item" href="#">Video Games & Consoles</a>
+              <a class="dropdown-item" href="#">Everything Else</a>
+
             </div>
           </div>
           <button type="button" class="btn btn-primary btn-sm">Search</button>
