--- a/src/app/Footer/Footer.component.html
+++ b/src/app/Footer/Footer.component.html
@@ -1,5 +1,10 @@
 <div class="fixed-bottom">
-<ul class="nav">
+    <div class="row h-100">
+        <div class="col-2">
+        </div>
+        <div class="col-7">
+
+    <ul class="nav">
     <li class="nav-item">
     <button type="button" class="btn btn-secondary btn-sm btn-light" >About eBay</button>
     <button type="button" class="btn btn-secondary btn-sm btn-light">Announcements</button>
@@ -13,9 +18,9 @@
 </ul>
 
 <ul class="nav">
-    <li class="nav-item">
+    <li class="nav-item" style="font-size:10px;">
         Copyright 1995-2022 eBay Inc. All Rights Reserved
-    <button type="button" class="btn btn-secondary btn-sm btn-light" >Accesibility,</button>
+    <button type="button" class="btn btn-secondary btn-sm btn-light">Accesibility,</button>
     <button type="button" class="btn btn-secondary btn-sm btn-light">User Agreement,</button>
     <button type="button" class="btn btn-secondary btn-sm btn-light">Privacy,</button>
     <button type="button" class="btn btn-secondary btn-sm btn-light">Cookies,</button>
@@ -25,6 +30,8 @@
 </li>
 </ul>
 
+</div>
+</div>
 </div>
 
 
