--- a/src/app/TopNavBar/TopNavBar.component.html
+++ b/src/app/TopNavBar/TopNavBar.component.html
@@ -1,12 +1,26 @@
-<div>
- Hi! Hit <button type="button" class="btn btn-link btn-sm">Sign in</button> or <button type="button" class="btn btn-link btn-sm">Register</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light" >Daily Deals</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Brand Outlet</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Help & Contact</button>
-    
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Sell</button>
+<div class="row h-100">
+    <div class="col-1">
+    </div>
+    <div class="col-4">
 
-    
-    <button type="button" class="btn btn-secondary btn-sm btn-light"><img src="/assets/bell.png" style=height:22px></button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light"><img src="/assets/shopping.png" style=height:22px></button>
+        Hi! Hit <button type="button" class="btn btn-link btn-sm">Sign in</button> or <button type="button"
+            class="btn btn-link btn-sm">Register</button>
+        <button type="button" class="btn btn-secondary btn-sm btn-light">Daily Deals</button>
+        <button type="button" class="btn btn-secondary btn-sm btn-light">Brand Outlet</button>
+        <button type="button" class="btn btn-secondary btn-sm btn-light">Help & Contact</button>
+    </div>
+    <div class="col-3">
+    </div>
+
+    <div class="col-4">
+
+        <button type="button" class="btn btn-secondary btn-sm btn-light">Sell</button>
+        <button type="button" class="btn btn-secondary btn-sm btn-light">Watchlist</button>
+        <button type="button" class="btn btn-secondary btn-sm btn-light">My eBay</button>
+        <button type="button" class="btn btn-secondary btn-sm btn-light"><img src="/assets/bell.png"
+                style=height:22px></button>
+        <button type="button" class="btn btn-secondary btn-sm btn-light"><img src="/assets/shopping.png"
+                style=height:22px></button>
+
+    </div>
 </div>
