--- a/src/app/Footer/Footer.component.html
+++ b/src/app/Footer/Footer.component.html
@@ -6,27 +6,27 @@
 
     <ul class="nav">
     <li class="nav-item">
-    <button type="button" class="btn btn-secondary btn-sm btn-light" >About eBay</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Announcements</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Community</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Security Center</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Policies</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Affiliates</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Help & Contact</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Site Map</button>
+    <button type="button" class="btn btn-default btn-sm">About eBay</button>
+    <button type="button" class="btn btn-default btn-sm">Announcements</button>
+    <button type="button" class="btn btn-default btn-sm">Community</button>
+    <button type="button" class="btn btn-default btn-sm">Security Center</button>
+    <button type="button" class="btn btn-default btn-sm">Policies</button>
+    <button type="button" class="btn btn-default btn-sm">Affiliates</button>
+    <button type="button" class="btn btn-default btn-sm">Help & Contact</button>
+    <button type="button" class="btn btn-default btn-sm">Site Map</button>
 </li>
 </ul>
 
 <ul class="nav">
     <li class="nav-item" style="font-size:10px;">
         Copyright 1995-2022 eBay Inc. All Rights Reserved
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Accesibility,</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">User Agreement,</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Privacy,</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Cookies,</button>
-    <button type="button" class="btn btn-secondary btn-sm btn-light">Do not sell my personal information</button>
+    <button type="button" class="btn btn-default btn-sm">Accesibility,</button>
+    <button type="button" class="btn btn-default btn-sm">User Agreement,</button>
+    <button type="button" class="btn btn-default btn-sm">Privacy,</button>
+    <button type="button" class="btn btn-default btn-sm">Cookies,</button>
+    <button type="button" class="btn btn-default btn-sm">Do not sell my personal information</button>
     and
-    <button type="button" class="btn btn-secondary btn-sm btn-light">AdChoice</button>
+    <button type="button" class="btn btn-default btn-sm">AdChoice</button>
 </li>
 </ul>
 
