--- a/src/app/TopNavBar/TopNavBar.component.html
+++ b/src/app/TopNavBar/TopNavBar.component.html
@@ -1,26 +1,30 @@
-<div class="row h-100">
-    <div class="col-1">
-    </div>
-    <div class="col-4">
 
-        Hi! Hit <button type="button" class="btn btn-link btn-sm">Sign in</button> or <button type="button"
-            class="btn btn-link btn-sm">Register</button>
-        <button type="button" class="btn btn-secondary btn-sm btn-light">Daily Deals</button>
-        <button type="button" class="btn btn-secondary btn-sm btn-light">Brand Outlet</button>
-        <button type="button" class="btn btn-secondary btn-sm btn-light">Help & Contact</button>
-    </div>
-    <div class="col-3">
-    </div>
+    <div class="row h-100">
+        <div class="col-1">
+        </div>
+      
+        <div class="col-4">
 
-    <div class="col-4">
+            Hi! Hit <button type="button" class="btn btn-link btn-sm">Sign in</button> or <button type="button"
+                class="btn btn-link btn-sm">Register</button>
+            <button type="button" class="btn btn-default btn-sm">Daily Deals</button>
+            <button type="button" class="btn btn-default btn-sm">Brand Outlet</button>
+            <button type="button" class="btn btn-default btn-sm">Help & Contact</button>
+        </div>
+        <div class="col-3">
+        </div>
 
-        <button type="button" class="btn btn-secondary btn-sm btn-light">Sell</button>
-        <button type="button" class="btn btn-secondary btn-sm btn-light">Watchlist</button>
-        <button type="button" class="btn btn-secondary btn-sm btn-light">My eBay</button>
-        <button type="button" class="btn btn-secondary btn-sm btn-light"><img src="/assets/bell.png"
-                style=height:22px></button>
-        <button type="button" class="btn btn-secondary btn-sm btn-light"><img src="/assets/shopping.png"
-                style=height:22px></button>
+        <div class="col-4">
 
+            <button type="button" class="btn btn-default btn-sm">Sell</button>
+            
+            <button type="button" class="btn btn-default btn-sm">Watchlist</button>
+            <button type="button" class="btn btn-default btn-sm">My eBay</button>
+            <button type="button" class="btn btn-default btn-sm"><img src="/assets/bell.png"
+                    style=height:22px></button>
+            <button type="button" class="btn btn-default btn-sm"><img src="/assets/shopping.png"
+                    style=height:22px></button>
+
+        </div>
+        <span class="border border-grey"></span>
     </div>
-</div>
