--- a/src/app/navigation/navbar.component.html
+++ b/src/app/navigation/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class=" navbar navbar-expand-lg navbar-light bg-white navbar justify-content-center">
     <img src="/assets/index.png" style=height:50px>
     <div class="dropdown show">
-        <a class="btn btn-white dropdown-toggle " href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="btn btn-white dropdown-toggle " href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Shop by category
         </a>
       
@@ -19,9 +19,9 @@
       
       <nav class="navbar navbar-expand-lg navbar navbar-light bg-white">
       
-          <input class="outline-black" type="search" placeholder="Search for anything" aria-label="Search">
+          <input class="outline-black max-width: 90px" type="search" placeholder="Search for anything" aria-label="Search">
           <div class="dropdown">
-            <button class="btn btn-white dropdown-toggle btn-outline-dark" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-white dropdown-toggle btn-outline-dark" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               All Categories
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -63,9 +63,10 @@
 
             </div>
           </div>
-          <button type="button" class="btn btn-primary btn-sm">Search</button>
+          <button type="button" class="btn btn-primary btn-sm ">Search</button>
       </nav>
       
-      <button type="button" class="btn btn-link btn-sm">Advanced</button>
+      <button type="button" class="btn  btn-sm text-secondary">Advanced</button>
+      
     </nav>
     
