--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,16 @@
 <ebay-TopCard>
   Loading . . .
 </ebay-TopCard>
+
+<ebay-Ad>
+Loading . . .
+</ebay-Ad>
+
+<ebay-MiddleCarousel>
+  Loading...
+</ebay-MiddleCarousel>
+
+<ebay-MiddleButtons>
+
+  Loading. . .
+</ebay-MiddleButtons>
