--- a/src/app/MiddleButtons/MiddleButtons.component.html
+++ b/src/app/MiddleButtons/MiddleButtons.component.html
@@ -5,9 +5,52 @@
     <div class="col-10">
 
 
-<nav class="navbar navbar-default bg-default">
-    <span class="navbar-brand mb-0 h1">Brave the cold with winter essentials <span class="border border-dark"></span><button type="button" class="btn btn-default"> See All -></button></span>
-  </nav>
+        <nav class="navbar navbar-default bg-default">
+            <span class="navbar-brand mb-0 h1">Brave the cold with winter essentials <span
+                    class="border border-dark"></span><button type="button" class="btn btn-default"> See All
+                    -></button></span>
+        </nav>
 
-  </div>
-  
+    </div>
+
+    <div class="row h-100">
+        <div class="col-2">
+
+        </div>
+        
+        <div class=" col-1 border-0" style="height: 10rem">
+            <button class="button btn-lg button"><img src="/assets/blankets.png" class="img-fluid rounded-circle" style=height:136px></button>
+            <p class="text-center"><u>Blankets</u></p>
+          </div>
+          <div class=" col-1 border-0" style="height: 10rem">
+            <button class="button btn-lg button "><img src="/assets/heater.jpeg" class="rounded-circle" style=height:186px, width=96px ></button>
+            <p class="text-center"><u>Heaters</u></p>
+          </div>
+
+          <div class=" col-1 border-0" style="height: 10rem">
+            <button class="button btn-lg button "><img src="/assets/thermostat.jpeg" class="rounded-circle" style=height:76px></button>
+            <p class="text-center"><u>Thermostats</u></p>
+          </div>
+             
+          <div class=" col-1 border-0" style="height: 10rem">
+            <button class="button btn-lg button "><img src="/assets/generator.jpeg" class="rounded-circle" style=height:76px></button>
+            <p class="text-center"><u>Generators</u></p>
+          </div>
+          <div class=" col-1 border-0" style="height: 10rem">
+            <button class="button btn-lg button "><img src="/assets/snowblower.jpeg" class="rounded-circle" style=height:76px></button>
+            <p class="text-center"><u>Snowblowers</u></p>
+          </div>
+
+          <div class=" col-1 border-0" style="height: 10rem">
+            <button class="button btn-lg button"><img src="/assets/snowShovel.jpeg" class="rounded-circle" style=height:76px></button>
+            <p class="text-center"><u>Snow Shovels</u></p>
+          </div>
+             
+          <div class="col-1 border-0" style="height: 10rem">
+            <button class="button btn-lg button"><img src="/assets/fireplace.jpeg" class="img-fluid rounded-circle" style=height:106px></button>
+            <p class="text-center"><u>Fireplaces</u></p>
+          </div>
+          
+          
+          
+          </div>
