--- a/src/app/MiddleCarousel/MiddleCarousel.component.html
+++ b/src/app/MiddleCarousel/MiddleCarousel.component.html
@@ -15,26 +15,26 @@
         </div>
     </div>
 
-    <div class="col-8">
+    <div class="col-6">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="..." alt="First slide">
+                    <img src="/assets/index.png" style=height:210px>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="..." alt="Second slide">
+                    <img src="/assets/watches.jpeg" style=height:210px>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="..." alt="Third slide">
+                    <img src="/assets/index.png" style=height:210px>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
+                <span class="sr-only text-danger">Previous</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
+                <span class="sr-only text-danger">Next</span>
             </a>
         </div>
     </div>
