--- a/src/app/navigation/navbar.component.html
+++ b/src/app/navigation/navbar.component.html
@@ -63,10 +63,11 @@
 
             </div>
           </div>
-          <button type="button" class="btn btn-primary btn-sm ">Search</button>
+          <button type="button" class="btn btn-primary  ">Search</button>
       </nav>
       
       <button type="button" class="btn  btn-sm text-secondary">Advanced</button>
+      
       
     </nav>
     
