--- a/src/app/Ad/Ad.component.html
+++ b/src/app/Ad/Ad.component.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-    <img src="/assets/bannerAd.jpeg" class="rounded" style=width:500px>
+    <img src="/assets/bannerAd.jpeg" class="rounded" style=height:150px>
   </div>
 
  
