--- a/src/app/MiddleButtons/MiddleButtons.component.html
+++ b/src/app/MiddleButtons/MiddleButtons.component.html
@@ -51,6 +51,6 @@
             <p class="text-center"><u>Fireplaces</u></p>
           </div>
           
-          
+          <div class="mt-xl-4"></div>
           
           </div>
