--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,9 @@
 Loading . . .
 </ebay-Ad>
 
-<ebay-MiddleCarousel>
+<ebay-MiddleCarousel  img= "/assets/airpods.jpeg",
+  price=  139.99,
+  discount= "">
   Loading...
 </ebay-MiddleCarousel>
 
