--- a/src/app/Footer/Footer.component.html
+++ b/src/app/Footer/Footer.component.html
@@ -1,21 +1,86 @@
 
     <div class="row h-100">
+        
+        <p><a href="#" class="text-secondary text-center h6"></a></p>
+        <p><a href="#" class="text-secondary text-center h6"></a></p>
+        <p><a href="#" class="text-secondary text-center h6"></a></p>
+        <span class="border border-light"></span>
         <div class="col-2">
         </div>
-        <div class="col-7">
+        <div class="col-10">
 
-    <ul class="nav">
-    <li class="nav-item">
-    <button type="button" class="btn btn-default btn-sm">About eBay</button>
-    <button type="button" class="btn btn-default btn-sm">Announcements</button>
-    <button type="button" class="btn btn-default btn-sm">Community</button>
-    <button type="button" class="btn btn-default btn-sm">Security Center</button>
-    <button type="button" class="btn btn-default btn-sm">Policies</button>
-    <button type="button" class="btn btn-default btn-sm">Affiliates</button>
-    <button type="button" class="btn btn-default btn-sm">Help & Contact</button>
-    <button type="button" class="btn btn-default btn-sm">Site Map</button>
-</li>
-</ul>
+            <div class="btn-group-vertical text-left col-2">
+               
+    <button type="button" class="btn btn-default">Buy</button>
+    <button type="button" class="btn btn-default btn-sm ">Registration</button>
+    <button type="button" class="btn btn-default btn-sm ">Bidding & buying help</button>
+    <button type="button" class="btn btn-default btn-sm ">Stores</button>
+    <button type="button" class="btn btn-default btn-sm ">eBay for Charity</button>
+    <button type="button" class="btn btn-default btn-sm ">Charity Shop</button>
+
+</div>
+
+
+<div class="btn-group-vertical text-left col-2">
+     
+    <button type="button" class="btn btn-default">Sell</button>
+    <button type="button" class="btn btn-default btn-sm ">Start selling</button>
+    <button type="button" class="btn btn-default btn-sm ">How to sell</button>
+    <button type="button" class="btn btn-default btn-sm ">Buisness Sellers</button>
+    <button type="button" class="btn btn-default btn-sm ">Affiliates</button>
+    <button type="button" class="btn btn-default btn-sm "></button>
+    <button type="button" class="btn btn-default">Tools & apps</button>
+    <button type="button" class="btn btn-default btn-sm ">Developers</button>
+    <button type="button" class="btn btn-default btn-sm ">Security center</button>
+    <button type="button" class="btn btn-default btn-sm ">Site map</button>
+    
+   
+</div>
+
+<div class="btn-group-vertical text-left col-2">
+     
+    <button type="button" class="btn btn-default">Stay connected</button>
+    <button type="button" class="btn btn-default btn-sm ">Facebook</button>
+    <button type="button" class="btn btn-default btn-sm ">Twitter</button>
+    
+    
+   
+</div>
+
+<div class="btn-group-vertical text-left col-2">
+               
+    <button type="button" class="btn btn-default">About eBay</button>
+    <button type="button" class="btn btn-default btn-sm ">Company info</button>
+    <button type="button" class="btn btn-default btn-sm ">News</button>
+    <button type="button" class="btn btn-default btn-sm ">Investors</button>
+    <button type="button" class="btn btn-default btn-sm ">Careers</button>
+    <button type="button" class="btn btn-default btn-sm ">Diversity & Inclusion</button>
+    <button type="button" class="btn btn-default btn-sm ">Global Impact</button>
+    <button type="button" class="btn btn-default btn-sm ">Government relations</button>
+    <button type="button" class="btn btn-default btn-sm ">Advertise with us</button>
+    <button type="button" class="btn btn-default btn-sm ">Policies</button>
+    <button type="button" class="btn btn-default btn-sm ">Verified Rights Owner(VeRO) Program</button>
+    <button type="button" class="btn btn-default btn-sm ">eCi Liscenses</button>
+
+</div>
+
+<div class="btn-group-vertical text-left col-2">
+   
+    <button type="button" class="btn btn-default">Help & Contact</button>
+    <button type="button" class="btn btn-default btn-sm ">Seller Center</button>
+    <button type="button" class="btn btn-default btn-sm ">Contact Us</button>
+    <button type="button" class="btn btn-default btn-sm ">eBay Returns</button>
+    <button type="button" class="btn btn-default btn-sm "></button>
+    <button type="button" class="btn btn-default">Community</button>
+    <button type="button" class="btn btn-default btn-sm ">Announcements</button>
+    <button type="button" class="btn btn-default btn-sm ">eBay Community</button>
+    <button type="button" class="btn btn-default btn-sm ">eBay for Buisness Podcase</button>
+    <button type="button" class="btn btn-default btn-sm "></button>
+    <button type="button" class="btn btn-default">eBay Sites</button>
+    <button type="button" class="btn btn-default btn-sm"><img src="/assets/USA.png"
+        style=height:22px> United States</button>
+
+</div>
 
 <ul class="nav">
     <li class="nav-item" style="font-size:10px;">
@@ -26,7 +91,7 @@
     <button type="button" class="btn btn-default btn-sm">Cookies,</button>
     <button type="button" class="btn btn-default btn-sm">Do not sell my personal information</button>
     and
-    <button type="button" class="btn btn-default btn-sm">AdChoice</button>
+    <button type="button" class="btn btn-default btn-sm ">AdChoice</button>
 </li>
 </ul>
 
