--- a/src/app/MiddleCarousel/MiddleCarousel.component.html
+++ b/src/app/MiddleCarousel/MiddleCarousel.component.html
@@ -5,36 +5,130 @@
 
     <div class="col-2">
 
-        <div class="card" style="height: 12rem;">
+        <div class="card" style="height: 20rem;">
 
             <div class="card-body bg-danger">
-                <h5 class="card-title text-white">Accessorise Your Phone</h5>
-                <p class="card-text text-white">Up to 50% off with free shipping</p>
+                <h5 class="card-title text-white h1">Accessorise your Phone</h5>
+                <p class="card-text text-white pt-xl-5 pl-xl-4">Up to 50% off with free shipping</p>
                 <a href="#" class="btn btn-danger btn-outline-light">Shop Now -></a>
             </div>
         </div>
     </div>
 
     <div class="col-6">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="/assets/index.png" style=height:210px>
-                </div>
-                <div class="carousel-item">
-                    <img src="/assets/watches.jpeg" style=height:210px>
-                </div>
-                <div class="carousel-item">
-                    <img src="/assets/index.png" style=height:210px>
-                </div>
+              <div class="carousel-item active">
+                <div class="row">
+                    <div class="col-sm-4">
+                      <div class="card">
+                        <div class="card-body">
+                            <img src="{{img}}" style=height:230px>
+                          <h5 class="card-title">${{price}}</h5>
+                          <p class="card-text">{{discount}}</p>
+                          
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="card">
+                        <div class="card-body">
+                            <img src="/assets/airpods.jpeg" style=height:230px>
+                            <h5 class="card-title">199.99</h5>
+                            <p class="card-text">no sale</p>
+
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card">
+                          <div class="card-body">
+                            <img src="/assets/airpods.jpeg" style=height:230px>
+                           <h5 class="card-title">199.99</h5>
+                          <p class="card-text">no sale</p>
+                            
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                    <div class="col-sm-4">
+                      <div class="card">
+                        <div class="card-body">
+                            <img src="/assets/airpods.jpeg" style=height:200px>
+                          <h5 class="card-title">Special title treatment</h5>
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="card">
+                        <div class="card-body">
+                            <img src="/assets/airpods.jpeg" style=height:200px>
+                          <h5 class="card-title">Special title treatment</h5>
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card">
+                          <div class="card-body">
+                            <img src="/assets/airpods.jpeg" style=height:200px>
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row">
+                    <div class="col-sm-4">
+                      <div class="card">
+                        <div class="card-body">
+                            <img src="/assets/airpods.jpeg" style=height:200px>
+                          <h5 class="card-title">Special title treatment</h5>
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="card">
+                        <div class="card-body">
+                            <img src="/assets/airpods.jpeg" style=height:200px>
+                          <h5 class="card-title">Special title treatment</h5>
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card">
+                          <div class="card-body">
+                            <img src="/assets/airpods.jpeg" style=height:200px>
+                            <h5 class="card-title">Special title treatment</h5>
+                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+              </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only text-danger">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only text-danger">Next</span>
-            </a>
-        </div>
-    </div>
+            <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon btn btn-primary" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon btn btn-primary" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          </div>
