--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,10 +18,12 @@
 Loading . . .
 </ebay-Ad>
 
-<ebay-MiddleCarousel  img= "/assets/airpods.jpeg",
-  price=  139.99,
-  discount= "">
+<ebay-MiddleCarousel>
+  <!-- <div *ngFor="let product of products">
+    <div img={{product.img}} price={{product.price}} disount={{product.discount}}>
   Loading...
+  </div>
+  </div> -->
 </ebay-MiddleCarousel>
 
 <ebay-MiddleButtons>
