--- a/src/app/Footer/Footer.component.html
+++ b/src/app/Footer/Footer.component.html
@@ -1,5 +1,6 @@
 
-    <div class="row h-100">
+   
+   <div class="row align-items-top">
         
         <p><a href="#" class="text-secondary text-center h6"></a></p>
         <p><a href="#" class="text-secondary text-center h6"></a></p>
@@ -9,39 +10,39 @@
         </div>
         <div class="col-10">
 
-            <div class="btn-group-vertical text-left col-2">
+            <div class="btn-group-vertical col-2">
                
-    <button type="button" class="btn btn-default">Buy</button>
-    <button type="button" class="btn btn-default btn-sm ">Registration</button>
-    <button type="button" class="btn btn-default btn-sm ">Bidding & buying help</button>
-    <button type="button" class="btn btn-default btn-sm ">Stores</button>
-    <button type="button" class="btn btn-default btn-sm ">eBay for Charity</button>
-    <button type="button" class="btn btn-default btn-sm ">Charity Shop</button>
+    <button type="button" class="btn btn-default text-left">Buy</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Registration</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Bidding & buying help</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Stores</button>
+    <button type="button" class="btn btn-default btn-sm text-left">eBay for Charity</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Charity Shop</button>
 
 </div>
 
+
+<div class="btn-group-vertical col-2">
+     
+    <button type="button" class="btn btn-default text-left">Sell</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Start selling</button>
+    <button type="button" class="btn btn-default btn-sm text-left">How to sell</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Buisness Sellers</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Affiliates</button>
+    <button type="button" class="btn btn-default btn-sm text-left"></button>
+    <button type="button" class="btn btn-default text-left">Tools & apps</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Developers</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Security center</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Site map</button>
+    
+   
+</div>
 
 <div class="btn-group-vertical text-left col-2">
      
-    <button type="button" class="btn btn-default">Sell</button>
-    <button type="button" class="btn btn-default btn-sm ">Start selling</button>
-    <button type="button" class="btn btn-default btn-sm ">How to sell</button>
-    <button type="button" class="btn btn-default btn-sm ">Buisness Sellers</button>
-    <button type="button" class="btn btn-default btn-sm ">Affiliates</button>
-    <button type="button" class="btn btn-default btn-sm "></button>
-    <button type="button" class="btn btn-default">Tools & apps</button>
-    <button type="button" class="btn btn-default btn-sm ">Developers</button>
-    <button type="button" class="btn btn-default btn-sm ">Security center</button>
-    <button type="button" class="btn btn-default btn-sm ">Site map</button>
-    
-   
-</div>
-
-<div class="btn-group-vertical text-left col-2">
-     
-    <button type="button" class="btn btn-default">Stay connected</button>
-    <button type="button" class="btn btn-default btn-sm ">Facebook</button>
-    <button type="button" class="btn btn-default btn-sm ">Twitter</button>
+    <button type="button" class="btn btn-default text-left">Stay connected</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Facebook</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Twitter</button>
     
     
    
@@ -49,35 +50,35 @@
 
 <div class="btn-group-vertical text-left col-2">
                
-    <button type="button" class="btn btn-default">About eBay</button>
-    <button type="button" class="btn btn-default btn-sm ">Company info</button>
-    <button type="button" class="btn btn-default btn-sm ">News</button>
-    <button type="button" class="btn btn-default btn-sm ">Investors</button>
-    <button type="button" class="btn btn-default btn-sm ">Careers</button>
-    <button type="button" class="btn btn-default btn-sm ">Diversity & Inclusion</button>
-    <button type="button" class="btn btn-default btn-sm ">Global Impact</button>
-    <button type="button" class="btn btn-default btn-sm ">Government relations</button>
-    <button type="button" class="btn btn-default btn-sm ">Advertise with us</button>
-    <button type="button" class="btn btn-default btn-sm ">Policies</button>
-    <button type="button" class="btn btn-default btn-sm ">Verified Rights Owner(VeRO) Program</button>
-    <button type="button" class="btn btn-default btn-sm ">eCi Liscenses</button>
+    <button type="button" class="btn btn-default text-left">About eBay</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Company info</button>
+    <button type="button" class="btn btn-default btn-sm text-left">News</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Investors</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Careers</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Diversity & Inclusion</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Global Impact</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Government relations</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Advertise with us</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Policies</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Verified Rights Owner(VeRO) Program</button>
+    <button type="button" class="btn btn-default btn-sm text-left">eCi Liscenses</button>
 
 </div>
 
 <div class="btn-group-vertical text-left col-2">
    
-    <button type="button" class="btn btn-default">Help & Contact</button>
-    <button type="button" class="btn btn-default btn-sm ">Seller Center</button>
-    <button type="button" class="btn btn-default btn-sm ">Contact Us</button>
-    <button type="button" class="btn btn-default btn-sm ">eBay Returns</button>
-    <button type="button" class="btn btn-default btn-sm "></button>
-    <button type="button" class="btn btn-default">Community</button>
-    <button type="button" class="btn btn-default btn-sm ">Announcements</button>
-    <button type="button" class="btn btn-default btn-sm ">eBay Community</button>
-    <button type="button" class="btn btn-default btn-sm ">eBay for Buisness Podcase</button>
-    <button type="button" class="btn btn-default btn-sm "></button>
-    <button type="button" class="btn btn-default">eBay Sites</button>
-    <button type="button" class="btn btn-default btn-sm"><img src="/assets/USA.png"
+    <button type="button" class="btn btn-default text-left">Help & Contact</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Seller Center</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Contact Us</button>
+    <button type="button" class="btn btn-default btn-sm text-left">eBay Returns</button>
+    <button type="button" class="btn btn-default btn-sm text-left"></button>
+    <button type="button" class="btn btn-default text-left">Community</button>
+    <button type="button" class="btn btn-default btn-sm text-left">Announcements</button>
+    <button type="button" class="btn btn-default btn-sm text-left">eBay Community</button>
+    <button type="button" class="btn btn-default btn-sm text-left">eBay for Buisness Podcase</button>
+    <button type="button" class="btn btn-default btn-sm text-left"></button>
+    <button type="button" class="btn btn-default text-left">eBay Sites</button>
+    <button type="button" class="btn btn-default btn-sm text-left"><img src="/assets/USA.png"
         style=height:22px> United States</button>
 
 </div>
