--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,11 +22,16 @@ Loading . . .
   
 </ebay-MiddleCarousel>
 
+
 <ebay-MiddleButtons>
 
   Loading. . .
 </ebay-MiddleButtons>
 
+
+<ebay-lowerCard>
+  Loading
+</ebay-lowerCard>
 
 <ebay-Footer>
 
