--- a/src/app/TopNavBar/TopNavBar.component.html
+++ b/src/app/TopNavBar/TopNavBar.component.html
@@ -5,11 +5,11 @@
       
         <div class="col-4">
 
-            Hi! Hit <button type="button" class="btn btn-link btn-sm">Sign in</button> or <button type="button"
-                class="btn btn-link btn-sm">Register</button>
-            <button type="button" class="btn btn-default btn-sm">Daily Deals</button>
-            <button type="button" class="btn btn-default btn-sm">Brand Outlet</button>
-            <button type="button" class="btn btn-default btn-sm">Help & Contact</button>
+            Hi! Hit <button type="button" class="btn btn-link btn-sm" routerLink= 'SignIn'>Sign in</button> or <button type="button"
+                class="btn btn-link btn-sm" routerLink= 'register'>Register</button>
+            <button type="button" class="btn btn-default btn-sm" routerLink= 'dailyDeals'>Daily Deals</button>
+            <button type="button" class="btn btn-default btn-sm" routerLink= 'brandOutlet'>Brand Outlet</button>
+            <button type="button" class="btn btn-default btn-sm" routerLink= 'helpAndContact'>Help & Contact</button>
         </div>
         <div class="col-3">
         </div>
