--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,28 +10,11 @@
 
 </ebay-navbar>
 
-<ebay-TopCard>
-  Loading . . .
-</ebay-TopCard>
-
-<ebay-Ad>
-Loading . . .
-</ebay-Ad>
-
-<ebay-MiddleCarousel>
-  
-</ebay-MiddleCarousel>
 
 
-<ebay-MiddleButtons>
-
-  Loading. . .
-</ebay-MiddleButtons>
+<router-outlet></router-outlet>
 
 
-<ebay-lowerCard>
-  Loading
-</ebay-lowerCard>
 
 <ebay-Footer>
 
